# game

./: .gitignore  .gitmodules  BUGS.MD  Cargo.toml  README.md  TODO.MD  To Do.txt  audio.js  build.rs  config  cookie.js  index.html  player.json
battle/: Cargo.toml
battle/client/: Cargo.toml
battle/client/src/: action.rs  lib.rs  party.rs  ui.rs  view.rs
battle/game/: Cargo.toml
battle/game/examples/: battle.rs
battle/game/src/: guiref.rs  lib.rs  manager.rs
battle/src/: client.rs  data.rs  lib.rs  message.rs  player.rs  state.rs
battle/src/client/: action.rs  local.rs
battle/src/player/: ai.rs  settings.rs
battle/src/pokemon/: mod.rs  party.rs
crates/base/: Cargo.toml
crates/base/examples/: test.rs
crates/base/src/: audio.rs  controls.rs  graphics.rs  lib.rs  utils.rs
crates/battle-client/: Cargo.toml
crates/battle-client/examples/: examples.rs
crates/battle-client/src/: components.rs  lib.rs  players.rs  plugins.rs  state.rs  systems.rs
crates/battle-engine/: Cargo.toml  README.md  TODO.md
crates/battle-engine/examples/: test.rs
crates/battle-engine/src/: action.rs  context.rs  data.rs  lib.rs  move_queue.rs  players.rs  state.rs  transition.rs  ui.rs  view.rs
crates/builder-audio/: .gitignore  Cargo.toml
crates/builder-audio/examples/: run.rs
crates/builder-audio/src/: lib.rs
crates/builder-audio/test/: vs_wild.ron
crates/dex-gen/: .gitignore  Cargo.toml  TODO.md
crates/dex-gen/examples/: test.rs
crates/dex-gen/src/: items.rs  lib.rs  moves.rs  pokemon.rs
crates/engine/: Cargo.toml
crates/engine/examples/: structure.rs  test.rs
crates/engine/src/: controls.rs  events.rs  graphics.rs  lib.rs  text.rs  utils.rs
crates/frc-audio/: Cargo.toml
crates/frc-audio/src/: lib.rs  music.rs  sound.rs
crates/frc-data/: Cargo.toml
crates/frc-data/src/: data.rs  error.rs  lib.rs
crates/frc-input/: Cargo.toml
crates/frc-input/src/: keyboard.rs  lib.rs
crates/frc-pokedex/: Cargo.toml
crates/frc-pokedex/src/: instance.rs  lib.rs  pokemon.rs  texture.rs
crates/pokedex-client/: Cargo.toml
crates/pokedex-client-data/: Cargo.toml
crates/pokedex-client-data/src/: lib.rs
crates/pokedex-client/src/: battle_move.rs  gui.rs  lib.rs  texture.rs
crates/pokedex-engine/: Cargo.toml  README.md
crates/pokedex-engine-builder/: Cargo.toml
crates/pokedex-engine-builder/src/: lib.rs  pokemon.rs  trainer_group.rs
crates/pokedex-engine-core/: Cargo.toml
crates/pokedex-engine-core/src/: lib.rs
crates/pokedex-engine/examples/: party.rs  party.rs.old
crates/pokedex-engine/src/: data.rs  gui.rs  lib.rs  texture.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs
crates/world/: .gitignore  Cargo.toml
crates/world-builder/: Cargo.toml
crates/world-builder/examples/: run.rs
crates/world-builder/src/: bin.rs  gba_map.rs  lib.rs
crates/world-engine/: Cargo.toml
crates/world-engine/src/: battle.rs  battle_glue.rs  lib.rs
crates/world-gen/: .gitignore  Cargo.toml  edits.ron
crates/world-gen/examples/: run.rs
crates/world-gen/src/: bin.rs  edits.rs  lib.rs  mapping.rs  structs.rs
crates/world/src/: lib.rs  message.rs  random.rs  serialized.rs  state.rs
firecore/storage/: Cargo.toml
firecore/storage/game/: Cargo.toml
firecore/storage/player/: Cargo.toml
firecore/storage/src/: error.rs  lib.rs
game/: Cargo.toml
game/assets/fonts/: font0.ron  font1.ron
game/assets/music/: celadon.ron  encounter_girl.ron  gym.ron  lavender.ron  oak.ron  oaks_lab.ron  pallet.ron  title.ron  vermilion.ron
game/battle/: Cargo.toml
game/battle/examples/: run.rs
game/battle/src/: client.rs  data.rs  lib.rs  manager.rs  message.rs  state.rs
game/firecore/audio/: Cargo.toml
game/firecore/input/: Cargo.toml
game/firecore/pokedex/: Cargo.toml  README.md
game/firecore/storage/: Cargo.toml  README.md
game/firecore/text/: Cargo.toml
game/firecore/util/: Cargo.toml
game/src/: battle.rs  battle_glue.rs  config.rs  game.rs  init.rs  lib.rs  scene.rs  state.rs  text.rs  textures.rs
game/src/audio/: error.rs  mod.rs  music.rs  sound.rs
game/src/battle/: ai.rs  client.rs  client_state.rs  gui.rs  manager.rs  mod.rs  player.rs  state.rs
game/src/battle_cli/: manager.rs  mod.rs
game/src/graphics/: mod.rs  text.rs
game/src/gui/: bar.rs  button.rs  health.rs  health_bar.rs  mod.rs  panel.rs  pokemon.rs  text.rs
game/src/input/: controller.rs  keyboard.rs  mod.rs  touchscreen.rs
game/src/network/: message.rs
game/src/state/: game.rs  manager.rs
game/src/world/: battle.rs  mod.rs  npc.rs  render_coords.rs  screen.rs
game/world/: Cargo.toml
game/world/builder/: Cargo.toml
game/world/lib/: Cargo.toml
game/world/src/: battle.rs  lib.rs  npc.rs  player.rs  render_coords.rs  serialized.rs  warp_transition.rs
storage/: Cargo.toml
storage/src/: error.rs  lib.rs
world/: Cargo.toml
world/builder/: .gitignore  Cargo.toml
world/builder/examples/: run.rs
world/builder/src/: bin.rs  dex.rs  gba_map.rs  lib.rs
world/maps/celadon_city/: celadon_city.ron
world/maps/cerulean_city/: cerulean_city.ron
world/maps/cinnabar_island/: cinnabar_island.ron  cinnabar_island.toml
world/maps/digletts_cave/: digletts_cave.ron
world/maps/fuchsia_city/: fuchsia_city.ron
world/maps/gyms/: gyms.ron
world/maps/lavender_town/: lavender_town.ron
world/maps/mt_moon/: mt_moon.ron  mt_moon.toml
world/maps/oaks_lab/: 4.3_PALLET TOWN.map
world/maps/pallet_houses/: pallet_houses.ron
world/maps/pallet_town/: pallet_town.ron
world/maps/pallet_town_player_house/: pallet_town_player_house.toml
world/maps/pewter_city/: pewter_city.ron
world/maps/pewter_houses/: houses.ron
world/maps/pokemarts/: pokemarts.ron
world/maps/pokemon_centers/: pokemon_centers.ron
world/maps/route_1/: route_1.ron
world/maps/route_10/: 3.28_ROUTE 10.map  route_10.ron
world/maps/route_11/: route_11.ron
world/maps/route_12/: route_12.ron
world/maps/route_13/: route_13.ron
world/maps/route_14/: route_14.ron  route_14.toml
world/maps/route_15/: route_15.ron  (+1 more)
world/src/: lib.rs  serialized.rs
(+6369 files in other folders)
