[package]
name = "pokemon-game"
version = "0.5.0-beta.2022-07-25"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"
license = "CC0-1.0"
description = "Pokemon FireRed Clone"
repository = "https://github.com/fiirecore/pokemon-game"
keywords = ["games", "pokemon"]
categories = ["games"]
build = "build/build.rs"
readme = "README.md"
include = ["/build", "/assets"]
publish = false

[workspace]
members = ["crates/*"]

[features]
# discord = ["discord-rich-presence"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"

[dependencies]

firecore-battle-engine = { path = "crates/battle-engine", default-features = false, features = [
    "host",
    "ai",
    "default_engine_scripting",
    "audio",
] }
firecore-world-engine = { path = "crates/world-engine", default-features = false }
firecore-storage = { path = "crates/storage" }
firecore-event = { path = "crates/event" }

### Other

serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
tinystr = { version = "0.6", features = ["serde"], default-features = false }
postcard = { version = "1", default-features = false, features = ["alloc"] }

# discord-rich-presence = { version = "0.1", optional = true }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# pico-args = "0.4"

### Storage

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
general_storage_web = "0.2"

### Build dependencies

[build-dependencies]

firecore-dex-gen = { path = "crates/dex-gen" }
# firecore-world-gen = { path = "crates/world-gen" }

firecore-pokedex-engine-builder = { path = "crates/pokedex-engine-builder", default-features = false, features = [
    "compile",
    "audio",
] }

firecore-world-builder = { path = "crates/world-builder", package = "firecore-world-builder" }

firecore-audio-builder = { path = "crates/builder-audio" }
serde = "1"
firecore-storage = { path = "crates/storage", default-features = false }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.3"
