[package]
name = "firecore-game"
version = "0.5.0-beta.2022-08-03"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"
license = "CC0-1.0"
description = "Pokemon FireRed Clone"
repository = "https://github.com/fiirecore/game"
keywords = ["games", "pokemon"]
categories = ["games"]
build = "build/build.rs"
readme = "README.md"
include = ["/assets"]
publish = false

[workspace]
members = ["crates/*"]

[features]
# discord = ["discord-rich-presence"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"

[dependencies]

firecore-battle-client = { path = "crates/battle-client", default-features = false }
firecore-world-client = { path = "crates/world-client", default-features = false }
firecore-storage = { path = "crates/storage" }

### Other

serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

iyes_loopless = "0.9"

[dependencies.bevy]
version = "0.9"

### Build dependencies

[build-dependencies]

firecore-dex-gen = { path = "crates/dex-gen" }
firecore-pokedex-client-data = { path = "crates/pokedex-client-data" }
firecore-world-gen = { path = "crates/world-gen" }
firecore-world = { path = "crates/world" }

postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = "1"
ron = "0.8"
hashbrown = { version = "0.13" }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.3"
