[package]
name = "firecore-battle"
version = "0.5.0-beta.2021-07-04"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = []
ai = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }

firecore-dependencies = { path = "../firecore/deps", features = ["random", "log", "script"] }
firecore-pokedex = { path = "../pokedex" }