[package]
name = "firecore-game"
version = "0.4.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["audio", "static-link", "world", "battle"]
ser = ["firecore-dependencies/ser"]
audio = ["firecore-dependencies/audio", "parking_lot"]
# ui = ["macroquad/ui"]
world = ["firecore-world-lib"]
battle = []
static-link = ["firecore-dependencies/static-link", "bundled"]
bundled = ["firecore-dependencies/bundled"]

[dependencies]

firecore-dependencies = { path = "firecore/deps", features = ["hash", "vec", "str", "engine", "log"] }

firecore-util = { path = "firecore/util" }
firecore-pokedex-game = { path = "firecore/pokedex/game" }
pokemon-firered-clone-storage = { path = "firecore/storage/game" }
firecore-audio-lib = { path = "firecore/audio/lib" }
firecore-text = { path = "firecore/text" }

firecore-world-lib = { path = "world/lib", optional = true }

serde = { version = "1.0", features = ["derive"] }
enum-map = { version = "1.1", features = ["serde"] }
# atomic = "0.5"

parking_lot = { version = "0.11", optional = true }