[package]
name = "firecore-game"
version = "0.5.0-beta.2021-06-19"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["audio", "static-link", "world", "battle"]
ser = ["firecore-dependencies/ser"]
audio = ["firecore-dependencies/audio", "parking_lot"]
# ui = ["macroquad/ui"]
world = ["firecore-world"]
battle = ["firecore-battle"]
static-link = ["firecore-dependencies/static-link", "bundled"]
bundled = ["firecore-dependencies/bundled"]

[dependencies]

firecore-dependencies = { path = "firecore/deps", features = ["hash", "vec", "str", "engine", "log"] }

firecore-util = { path = "firecore/util" }
firecore-pokedex-game = { path = "firecore/pokedex/game" }
pokemon-firered-clone-storage = { path = "firecore/storage/game" }
firecore-audio = { path = "firecore/audio" }
firecore-text = { path = "firecore/text" }

firecore-world = { path = "world", optional = true }
firecore-battle = { path = "battle", optional = true }

serde = { version = "1.0", features = ["derive"] }
enum-map = { version = "1.1", features = ["serde"] }
atomic = "0.5"

parking_lot = { version = "0.11", optional = true }