[package]
name = "pokemon-game"
version = "0.5.0-beta.2021-06-13"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
description = "Pokemon FireRed Clone"
repository = "https://github.com/DoNotDoughnut/pokemon-game"
keywords = ["games", "pokemon"]
categories = ["games"]
build = "build/build.rs"
readme = "README.md"
include = ["/build", "/assets"]

[features]
default = ["audio", "static-link"]
audio = ["firecore-game/audio", "audio-builder"]
static-link = ["firecore-game/static-link", "firecore-game/bundled"]
discord = ["discord-rich-presence", "serde_json"]

[dependencies]

discord-rich-presence = { version = "0.1", optional = true }
serde_json = { version = "1.0", optional = true }

firecore-game = { path = "..", default-features = false, features = ["logger", "world", "battle"] }
firecore-battle-game = { path = "../battle/game" }

### Other

pico-args = "0.4"

### Build dependencies

[build-dependencies]

dex-builder = { path = "../pokedex/builder", package = "dex-builder" }
world-builder = { path = "../world/builder" }
font-builder = { path = "../firecore/text/builder" }
audio-builder = { path = "../firecore/audio/builder", package = "audio-builder", optional = true }
winres = "0.1"