[package]
name = "firecore-storage"
version = "0.5.0-beta.2021-07-02"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2021"
readme = "README.md"

[features]
default = ["io"]
io = ["firecore-engine", "quad-storage", "base64"]

[dependencies]

firecore-engine = { git = "https://github.com/DoNotDoughnut/firecore-engine", rev = "647676a", default-features = false, optional = true }
# firecore-engine = { path = "../../firecore/engine", default-features = false, optional = true }

### Serialization

serde = "1"
ron = { version = "0.7" }
bincode = { version = "1" }

### File management

dirs-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-storage = { version = "0.1.3", optional = true }
base64 = { version = "0.13", optional = true }
