[package]
name = "firecore-world"
version = "0.5.0-beta.2021-07-28"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
tinystr = { version = "0.4", features = ["serde"], default-features = false }
rand = { version = "0.8", default-features = false }

firecore-pokedex = { git = "https://github.com/fiirecore/pokedex", rev = "18f1de3" }
# firecore-pokedex = { path = "../../firecore/pokedex" }

firecore-text = { git = "https://github.com/DoNotDoughnut/firecore-engine", rev = "5ca80c4", package = "firecore-text" }
# firecore-text = { path = "../../firecore/engine/crates/text" }

### Pathfinding

# indexmap = "1"
