[package]
name = "firecore-world"
version = "0.5.0-beta.2021-07-28"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[dependencies]

serde = { version = "1", features = ["derive"] }
tinystr = { version = "0.4", features = ["serde"], default-features = false }
rand = { version = "0.8", default-features = false }
# enum-map = { version = "1", features = ["serde"] }

firecore-pokedex = { git = "https://github.com/fiirecore/pokedex", rev = "18f1de3" }
# firecore-pokedex = { path = "../../firecore/pokedex" }

### Pathfinding

# indexmap = "1"
