[package]
name = "firecore-battle-client"
version = "0.5.0-beta.2021-07-02"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = ["audio"]
audio = ["firecore-game/audio"]
static-link = ["firecore-game/static-link"]

[dependencies]
firecore-game = { path = "../../", default-features = false, features = ["logger"] }
firecore-battle = { path = ".." }