[package]
name = "firecore-battle-game"
version = "0.1.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firecore-game = { path = "../../" }
firecore-battle = { path = "..", features = ["ai"] }
firecore-battle-client = { path = "../client" }