[package]
name = "firecore-base"
version = "0.1.0"
edition = "2021"

[features]
default = ["gamepad"]
audio = ["bevy/bevy_audio"]
gamepad = ["bevy/bevy_gilrs"]

[dependencies]
bevy_egui = "0.18"

firecore-audio = { path = "../audio" }
firecore-text = { path = "../text" }

enum-map = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tinystr = { version = "0.7", features = ["serde"], default-features = false }

[dependencies.bevy]
version = "0.9"
default-features = false

[dev-dependencies]
firecore-storage = { path = "../storage", default-features = false }

[dev-dependencies.bevy]
version = "0.9"
default-features = true