[package]
name = "firecore-audio-builder"
version = "0.0.2"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2018"

[dependencies]

ron = "0.7"
serde = { version = "1", features = ["derive"] }
firecore-audio = { path = "../audio" }

[dev-dependencies]
firecore-storage = { path = "../storage", default-features = false }