[package]
name = "firecore-dex-gen"
version = "0.0.1"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"

[features]
default = ["client-data"]
client-data = ["image", "tempfile", "firecore-pokedex-client-data"]

[dependencies]
pokerust = { version = "0.2", git = "https://gitlab.com/DoNotDoughnut/pokerust", rev = "841a946" }
attohttpc = { version = "0.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }

rayon = "1"
anyhow = "1"
hashbrown = { version = "0.13", features = ["rayon", "serde"] }
enum-map = { version = "2", features = ["serde"] }
image = { version = "0.24", default-features = false, optional = true, features = [
    "png",
] }
firecore-pokedex-client-data = { path = "../pokedex-client-data", optional = true }
tempfile = { version = "3", optional = true }

[dependencies.firecore-battle]
version = "0.0.10"
git = "https://github.com/fiirecore/battle"
rev = "f0f5e7a"
default-features = false

[dependencies.firecore-battle-engine]
version = "0.0.0"
git = "https://github.com/fiirecore/battle"
package = "firecore-battle-engine"
rev = "f0f5e7a"

[dev-dependencies]
firecore-storage = { path = "../storage" }
