[package]
name = "firecore-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["audio", "gamepad"]
audio = ["notan/audio"]
gamepad = []#"fiirengine/gamepad"]

[dependencies]
# fiirengine = { git = "https://github.com/fiirecore-game/engine", rev = "6256024", default-features = false }
notan = { version = "0.4", features = ["egui", "log"] }

# Controls 

enum-map = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# Audio utils


firecore-audio = { path = "../audio" }

# Text rendering

firecore-text = { path = "../text" }

# Other

tinystr = { version = "0.6", features = ["serde"], default-features = false }
hashbrown = { version = "0.12" }

[dev-dependencies]
firecore-storage = { path = "../storage", default-features = false }