[package]
name = "firecore-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
audio = []

[dependencies]

# Graphics
wgpu = { version = "0.13" }
winit = { version = "0.26" }
image = { version = "0.24", features = ["png"] }
bytemuck = "1"

# Math
glam = "0.21"

# Async
pollster = "0.2"

instant = "0.1"
hashbrown = "0.12"
