[package]
name = "frc-data"
version = "0.1.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
ron = "0.6"

directories-next = "2.0"
miniquad-cookie = { path = "../cookie" }

ahash = { version = "0.7", features = ["serde"] }

lazy_static = "1.4"

async-trait = "0.1"

frc-input = { path = "../frc-input" }
#macroquad = { git = "https://github.com/DoNotDoughnut/macroquad", default-features = false, features = ["log-impl", "experimental", "serde"] }
macroquad = { git = "https://github.com/not-fl3/macroquad" }