[package]
name = "firecore-pokedex-client-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
hashbrown = { version = "0.13", features = ["serde"] }
enum-map = { version = "2", features = ["serde"] }
tinystr = { version = "0.7", features = ["serde"] }

[dependencies.firecore-pokedex]
version = "0.0.10" 
git = "https://github.com/fiirecore/pokedex" 
rev = "ddfac08"