[package]
name = "firecore-pokedex-client"
description = "GUIs and other graphical things for firecore-pokedex"
version = "0.0.3"                                                    # "0.5.0-beta.2021-08-16"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"
repository = "https://github.com/fiirecore/game"
readme = "README.md"
license = "MIT"


[dependencies]
tinystr = { version = "0.7", features = ["serde"], default-features = false }
enum-map = { version = "2", features = ["serde"] }
serde = { version = "1" }

firecore-pokedex-client-data = { path = "../pokedex-client-data" }
firecore-base = { path = "../base", default-features = false }

[dependencies.bevy]
version = "0.9"
default-features = false

[dev-dependencies]
firecore-storage = { path = "../storage", default-features = false }
rand = "0.8"
