[package]
name = "firecore-pokedex-engine-builder"
version = "0.0.4"
edition = "2021"

[features]
default = ["compile"]
compile = []
audio = ["compile"]

[dependencies]
firecore-pokedex = { version = "0.0.8", git = "https://github.com/fiirecore/pokedex", rev = "573e8b3" }
# firecore-pokedex = { path = "../../../firecore/pokedex" }

serde = { version = "1", features = ["derive"] }
enum-map = { version = "2", features = ["serde"] }
tinystr = { version = "0.6", features = ["serde"] }
hashbrown = { version = "0.9", features = ["serde"] }
