[package]
name = "firecore-pokedex-engine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firecore-pokedex = { version = "0.0.9" } #, git = "https://github.com/fiirecore/pokedex", rev = "83e97db" }
serde = "1"
hashbrown = { version = "0.12", features = ["serde"] }
enum-map = { version = "2", features = ["serde"] }
tinystr = { version = "0.6", features = ["serde"] }
