[package]
name = "firecore-storage"
version = "0.5.0-beta.2021-07-02"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2021"
readme = "README.md"

[features]
default = ["io"]
io = ["general_storage_web"]

[dependencies]

### Serialization

serde = "1"
ron = { version = "0.7" }
postcard = { version = "1", default-features = false, features = ["alloc"] }

### File management

# general_storage_static = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
general_storage_web = { version = "0.2", optional = true }
