[package]
name = "firecore-world-builder"
version = "0.5.0-beta.2021-12-24"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"

[dependencies]

### Map specifications

firecore-world = { path = "../world" }
firecore-storage = { path = "../storage", default-features = false }

### Serialization

serde = { version = "1", features = ["derive"] }
ron = "0.7"
either = { version = "1", features = ["serde"] }
hashbrown = { version = "0.12", features = ["serde"] }
enum-map = { version = "2", features = ["serde"] }

tinystr = { version = "0.6" }
image = { version = "0.23", default-features = false, features = [
    "png",
    "tga",
] }
