[package]
name = "firecore-world"
version = "0.6.0"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"

# [features]
# default = ["manager"]
# manager = []

[dependencies]

serde = { version = "1", features = ["derive"] }
tinystr = { version = "0.7", features = ["serde"], default-features = false }
rand = { version = "0.8", default-features = false }
hashbrown = { version = "0.13", features = ["serde"] }
enum-map = { version = "2", features = ["serde"] }

firecore-text = { path = "../text" }
firecore-audio = { path = "../audio" }

log = "0.4"

[dependencies.firecore-pokedex]
version = "0.0.10"
git = "https://github.com/fiirecore/pokedex"
rev = "ddfac08"
# path = ""


### Pathfinding

# indexmap = "1.6"
