[package]
name = "firecore-storage"
version = "0.5.0-beta.2021-07-02"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]

### Serialization

serde = "1"
ron = "0.7"

### File management

macroquad = "0.3"
dirs-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
miniquad-cookie = { git = "https://github.com/DoNotDoughnut/miniquad-cookie" }
