[package]
name = "firecore-battle"
version = "0.4.0-alpha.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["audio"]
audio = ["firecore-game/audio"]
ui = ["firecore-game/ui"]

[dependencies]

firecore-game = { path = "../", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
firecore-dependencies = { path = "../firecore/deps", features = ["ser"] }

[[example]]
name = "run"
required-features = ["ui"]