[package]
name = "firecore-battle"
version = "0.5.0-beta.2021-06-10"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

firecore-dependencies = { path = "../firecore/deps", features = ["random", "log", "script"] }
firecore-pokedex = { path = "../firecore/pokedex" }
firecore-saves = { path = "../firecore/storage/player" }