[package]
name = "firecore-world"
version = "0.4.0-alpha.1.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["audio"]
audio = ["firecore-game/audio"]

[dependencies]

firecore-game = { path = "../", default-features = false }

firecore-world-lib = { path = "./lib" }